@@ -2,6 +2,10 @@ Revision history for libev, a high-performance and full-featured event loop.
 
 TODO: ev_loop_wakeup
 
+TODO: EV_NO_THREADS/NO_SMP and/or EV_USE_PTHREADS or so. also document.
+TODO: #define EV_API_DECL static? ev_default_loop_ptr?
+TODO: EV_STANDALONE == NO_HASSEL (do not use clock_gettime in ev_standalone)
+TODO: memory fences for clang
 4.10
 	- fix a race where the workaround against the epoll fork bugs
           caused signals to not be handled anymore.
@@ -17,7 +21,8 @@ TODO: ev_loop_wakeup
           own floor () if it is missing. This should make it easier to embed,
           as no external libraries are required.
         - strategically import macros from libecb and mark rarely-used functions
-          as cache-chold (saving almost 2k code size on typical amd64 setups).
+          as cache-cold (saving almost 2k code size on typical amd64 setups).
+        - add Symbols.ev and Symbols.event files, that were missing.
 
 4.04 Wed Feb 16 09:01:51 CET 2011
 	- fix two problems in the native win32 backend, where reuse of fd's
